--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     <main>
         <section id="tablero">
+            <h1> ESTO ES UNA PRUEBA DE GITHUB</h1>
             <table>
                 <!-- Fila 1 -->
                 <tr>
