--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Ajedrez Interactivo</h1>
+        <h2>PRUEBA 3</h2>
     </header>
     <main>
         <section id="tablero">
